Renamed some files and added defaults for the settings properties.

--- a/web-version/index.html
+++ b/web-version/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <script src="../src/vendor/jquery.slim.min.js"></script>
-    <script src="romSettings.js"></script>
+    <script src="rom-viewer.settings.js"></script>
     <script src="../src/common.js"></script>
     <script src="index.js"></script>
   </body>
