Replaced settings format to lalow comments and added option to edit settings from the app.

--- a/web-version/index.html
+++ b/web-version/index.html
@@ -11,9 +11,9 @@
         <h3>Jump to:</h3>
       </div>
 
-      <siv class="main-contents">
+      <div class="main-contents">
         <div id="romsContainer" class="roms-container"></div>
-      </siv>
+      </div>
 
       <div id="platformFilter" class="platform-filter sidebar">
         <h3>Limit to:</h3>
