Removed unnecessary icons.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="assets/icons/appIcon.png" />
+    <link rel="icon" href="assets/icons/dvd_32px.png" />
     <link rel="stylesheet" href="index.css" />
     <title>ROM Viewer</title>
   </head>
