Added logging to error catch.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="assets/icons/dvd_32px.png" />
@@ -21,10 +21,9 @@
       <div id="platformInfo" class="platform-info sidebar"></div>
     </div>
 
+    <!-- <script src="../web-version/rom-viewer.settings.js"></script> -->
     <script src="vendor/neutralino.js"></script>
     <script src="vendor/jquery.slim.min.js"></script>
-
-    <!-- <script src="romSettings.js"></script> -->
     <script src="common.js"></script>
     <script src="index.js"></script>
   </body>
