--- a/web-version/index.html
+++ b/web-version/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,11 +18,11 @@
         <div id="romsContainer" class="roms-container"></div>
       </div>
 
-      <div class="platform-info sidebar"></div>
+      <div id="platformInfo" class="platform-info sidebar"></div>
     </div>
 
-    <script src="../src/vendor/jquery.slim.min.js"></script>
     <script src="rom-viewer.settings.js"></script>
+    <script src="../src/vendor/jquery.slim.min.js"></script>
     <script src="../src/common.js"></script>
     <script src="index.js"></script>
   </body>
