Added rom lsit to the right sidebar.

--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="assets/icons/dvd_32px.png" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/platform-links.css" />
+    <link rel="stylesheet" href="styles/link-list.css" />
     <link rel="stylesheet" href="styles/roms.css" />
     <title>ROM Viewer</title>
   </head>
   <body>
     <div class="main">
-      <div class="sidebar">
-        <ul id="platformLinks" class="platform-links no-style"></ul>
-      </div>
+      <div id="leftSidebar" class="sidebar"></div>
 
       <div class="main-contents">
         <div id="romsContainer" class="roms-container"></div>
       </div>
 
-      <div id="platformInfo" class="platform-info sidebar"></div>
+      <div id="rightSidebar" class="sidebar"></div>
     </div>
 
     <!-- <script src="../web-version/rom-viewer.settings.js"></script> -->
