Extracted some shared logic. Updated styles and readme.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="assets/icons/dvd_32px.png" />
+    <link rel="stylesheet" href="styles/windows-theme.css" />
+    <!-- <link rel="stylesheet" href="styles/steam-theme.css" /> -->
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/link-list.css" />
     <link rel="stylesheet" href="styles/roms.css" />
