--- a/web-version/index.html
+++ b/web-version/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="../src/assets/icons/dvd_32px.png" />
+    <link rel="stylesheet" href="../src/styles/windows-theme.css" />
+    <!-- <link rel="stylesheet" href="../src/styles/steam-theme.css" /> -->
     <link rel="stylesheet" href="../src/styles/main.css" />
     <link rel="stylesheet" href="../src/styles/link-list.css" />
     <link rel="stylesheet" href="../src/styles/roms.css" />
