Added theme setting.

--- a/web-version/index.html
+++ b/web-version/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="../src/assets/icons/dvd_32px.png" />
-    <link rel="stylesheet" href="../src/styles/windows-theme.css" />
-    <!-- <link rel="stylesheet" href="../src/styles/steam-theme.css" /> -->
+    <link rel="stylesheet" href="../src/styles/themes.css" />
     <link rel="stylesheet" href="../src/styles/main.css" />
     <link rel="stylesheet" href="../src/styles/link-list.css" />
     <link rel="stylesheet" href="../src/styles/roms.css" />
