Removed sidebar borders adjacent to the window border.

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <div class="main">
-      <div id="leftSidebar" class="sidebar"></div>
+      <div id="leftSidebar" class="sidebar left-sidebar"></div>
 
       <div class="main-contents">
         <div id="romsContainer" class="roms-container"></div>
       </div>
 
-      <div id="rightSidebar" class="sidebar"></div>
+      <div id="rightSidebar" class="sidebar right-sidebar"></div>
     </div>
 
     <!-- <script src="../web-version/rom-viewer.settings.js"></script> -->
