Input navigation refactor + WIP rom selection.

--- a/web-version/index.html
+++ b/web-version/index.html
@@ -23,6 +23,7 @@
     <script src="rom-viewer.settings.js"></script>
     <script src="../src/vendor/jquery.slim.min.js"></script>
     <script src="../src/common.js"></script>
+    <script src="../src/input-navigation.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
